fix: show full sidebar profile on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2532,7 +2532,8 @@ textarea.form-input::-webkit-resizer { display: none; }
    * REUSED STYLE
    */
 
-  .sidebar, article { width: auto; }
+  .sidebar { width: 100%; }
+  article { width: auto; }
 
   article { min-height: 100%; }
 
@@ -2571,6 +2572,7 @@ textarea.form-input::-webkit-resizer { display: none; }
     margin-bottom: 0;
     padding-top: 60px;
     z-index: 1;
+    overflow: visible;
   }
 
   .sidebar-info { flex-direction: column; }
